k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miju-app-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: miju-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
