k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miju-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: miju-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miju-app-service
            port:
              number: 80
